# Pos_agentes_Eprompt

./: README.md  generate_image.py  generate_pdf.py  guardrails.py  main.py  ollama-main.py  pyproject.toml
outputs/: 39e6401e-c4b4-4357-8ea6-c89da6026955.json  3baa52ad-6bc3-4890-a00c-aee144d05795.json
