[project]
name = "Pos_agentes_Eprompt"
version = "0.1.0"
description = "Repositório dedicado para o trabalho final desenvolvido na disciplina de Engenharia de Prompts, da pós graduação de Agentes Inteligentes, pela UFG."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.2",
    "guardrails-ai==0.6.0",
    "guardrails-api-client==0.4.0a1",
    "litellm>=1.53.7",
    "pillow>=11.0.0",
    "fpdf>=1.7.2",
]
